--- a/public/style.css
+++ b/public/style.css
@@ -15,6 +15,9 @@ body {
 	width: 100%;
 }
 
+#loading-message {
+	position: absolute;
+}
 #main-container {
 	width: 100%;
 	height: 100vh;
@@ -32,20 +35,27 @@ h1 {
 }
 
 h3,
-h5 {
+h5,
+img {
 	text-align: right;
 }
 
 h5:hover {
-	transform: rotate3d(1, 2, 3, 10deg);
+	text-decoration: underline;
 }
 
 #bored-api {
+	position: absolute;
+	left: 0;
 	background-color: #5e6472;
 	color: white;
 	margin-top: 20px;
 	padding: 10px;
-	text-align: right;
+	width: 100vw;
+}
+
+#bored-api p {
+	margin-right: 10vh;
 }
 #search-bar {
 	font-size: 2em;
